# AEGIS

./: .gitignore  IDENTIFICATION_PROCESS.md  README.md  README_BR.md  pubspec.yaml
.claude/: settings.local.json
.github/workflows/: deploy.yml
assets/: how_to_use.md
cpp/: CMakeLists.txt
cpp/include/aegis/: aegis_api.h  agent_controller.hpp  automatic_pruner.hpp  collinearity_analyzer.hpp  de_optimizer.hpp  excitation_analyzer.hpp  identification_pipeline.hpp  individual_evaluator.hpp  local_refiner.hpp  metrics.hpp  normalizer.hpp  overfitting_detector.hpp  population_diversity_monitor.hpp  rational_model.hpp  regressor_library.hpp  residual_analyzer.hpp  safe_power.hpp  stability_analyzer.hpp  thread_pool.hpp  underfitting_detector.hpp
cpp/src/: aegis_api.cpp  agent_controller.cpp  automatic_pruner.cpp  collinearity_analyzer.cpp  de_optimizer.cpp  excitation_analyzer.cpp  identification_pipeline.cpp  individual_evaluator.cpp  local_refiner.cpp  metrics.cpp  normalizer.cpp  overfitting_detector.cpp  population_diversity_monitor.cpp  rational_model.cpp  regressor_library.cpp  residual_analyzer.cpp  stability_analyzer.cpp  underfitting_detector.cpp
lib/: main.dart
lib/agent/: generation_history.dart  generation_snapshot.dart  tunable_parameter.dart
lib/core/math/: decomposition.dart  math.dart  matrix.dart  matrix_view.dart
lib/core/random/: xorshift128.dart
lib/core/types/: chromosome.dart  narx_model.dart  regressor.dart  term.dart  types.dart
lib/data/: data_loader.dart
lib/engine/de/: chromosome_factory.dart  de_engine.dart  island.dart  migration.dart  population.dart  regressor_builder.dart
lib/engine/de/strategies/: crossover_strategy.dart  de_rand_1.dart  jade_mutation.dart  mutation_strategy.dart  strategies.dart
lib/engine/fitness/: bic_fitness.dart  err_calculator.dart  fitness_evaluator.dart
lib/engine/identification/: data_normalizer.dart  data_splitter.dart  model_validator.dart
lib/engine/stopping/: stopping_criterion.dart
lib/ffi/: aegis_ffi_bindings.dart  aegis_ffi_service.dart  aegis_ffi_service_native.dart  aegis_ffi_service_stub.dart  aegis_library.dart  aegis_library_native.dart  aegis_library_stub.dart  aegis_library_web.dart  aegis_wasm_service.dart
lib/services/: agent_websocket_service.dart  llm_agent.dart  llm_agent_native.dart  llm_agent_stub.dart  llm_agent_web.dart  rule_based_agent.dart
lib/ui/screens/: about_screen.dart  agent_dashboard_screen.dart  data_screen.dart  evolution_screen.dart  home_screen.dart  how_to_screen.dart  results_screen.dart
lib/ui/state/: app_state.dart
lib/ui/theme/: app_theme.dart
lib/ui/widgets/: stat_card.dart
test/: widget_test.dart
web/: README.md  README_BR.md  aegis_wasm_loader.js  how_to_use_br.md  index.html  manifest.json
windows/: CMakeLists.txt
